# client

./: CMakeLists.txt  main.cpp
lib/client/: CMakeLists.txt  client.cpp  client.hpp
utilitu/: oper.txt
